# Dwine-Minecraft-Launcher

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build-mod.yml
cosmetics/: index.json
dwine/: __init__.py  __main__.py  cli.py
dwine/content/: __init__.py  modrinth.py  mods.py  presets.py  resourcepacks.py  shaders.py
dwine/core/: __init__.py  command.py  config.py  events.py  http.py  log.py  paths.py
dwine/features/: __init__.py  crosshair.py  hud.py  registry.py  safety.py
dwine/integrations/: __init__.py  cloudsync.py  cosmetics.py  discord_rpc.py  spotify.py
dwine/launcher/: __init__.py  accounts.py  auth.py  companion.py  crash.py  install.py  java.py  launch.py  manifest.py  news.py  play.py  profiles.py  rules.py  update.py
dwine/launcher/loaders/: __init__.py  fabric.py  forge.py  quilt.py
dwine/plugins/: __init__.py  api.py  loader.py
dwine/theme/: __init__.py  engine.py  mcpack.py  themes.py
dwine/tools/: __init__.py  cleaner.py  ping.py  screenshots.py  skins.py
dwine/ui/: __init__.py  app.py  crosshair_pad.py  widgets.py
dwine/ui/pages/: __init__.py  accounts.py  features.py  home.py  hud_editor.py  logs.py  mods.py  news.py  screenshots.py  settings.py
examples/plugins/: server_status.py
mod/: .gitignore  build.gradle  gradle.properties  settings.gradle
mod/src/main/java/com/dwine/: Dwine.java  DwineClient.java
mod/src/main/java/com/dwine/config/: ConfigManager.java
mod/src/main/java/com/dwine/gui/: ClickGuiScreen.java  Draw.java  HudEditorScreen.java  MenuScreen.java  Theme.java
mod/src/main/java/com/dwine/mixin/: PressableWidgetMixin.java
mod/src/main/java/com/dwine/module/: Category.java  HudModule.java  Module.java  ModuleManager.java
mod/src/main/java/com/dwine/module/impl/hud/: ArmorHud.java  ArrayListHud.java  BiomeHud.java  ClockHud.java  CoordinatesHud.java  CpsHud.java  DirectionHud.java  FpsHud.java  KeystrokesHud.java  PingHud.java  PotionHud.java  SessionHud.java  SpeedHud.java  WatermarkHud.java
mod/src/main/java/com/dwine/module/impl/misc/: FrameLimit.java
mod/src/main/java/com/dwine/module/impl/movement/: AutoSprint.java  (+2 more)
mod/src/main/java/com/dwine/setting/: BooleanSetting.java  ColorSetting.java  ModeSetting.java  NumberSetting.java  Setting.java
mod/src/main/resources/: dwine.mixins.json  fabric.mod.json
news/: feed.json
tests/: conftest.py  test_companion.py  test_config.py  test_features.py  test_launcher.py  test_safety.py  test_theme.py  test_tools.py
(+4 files in other folders)
