[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dwine"
version = "0.1.0"
description = "Dwine — the fully legitimate, next-generation Minecraft client + launcher"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Milkdromeda Studios" }]
requires-python = ">=3.10"
keywords = ["minecraft", "launcher", "client", "fabric", "forge", "quilt", "modrinth"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
ui = ["PySide6>=6.6"]
theme = ["Pillow>=10.0"]
rpc = ["pypresence>=4.3"]
full = ["PySide6>=6.6", "Pillow>=10.0", "pypresence>=4.3"]
dev = ["pytest>=7.4", "Pillow>=10.0"]

[project.scripts]
dwine = "dwine.cli:main"

[project.urls]
Homepage = "https://github.com/MilkdromedaStudios/Dwine"
Issues = "https://github.com/MilkdromedaStudios/Dwine/issues"

[tool.setuptools.packages.find]
include = ["dwine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
